@@ -1,6 +1,7 @@
 <size=20><b>Version 2.7.0-preview.1</b></size>
 
 - Virtual Camera Lens inspector supports display of Horizontal FOV
+- Virtual Camera Lens can override orthographic and physical camera settings
 - Bugfix (1060230) - lens inspector sometimes displayed ortho vs perspective incorrectly for a brief time
 
 <size=20><b>Version 2.6.3</b></size>
